# lwrates_analysis_for_thesis

./: lw_db_analysis.ipynb  mean_heating_rate.ipynb  pyproject.toml  rates_compare_latif.ipynb  setup.py
code_development/: hm_detachment.ipynb
lwrates_analysis/: plotting_helpers.py
