[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lwrates_analysis"
version = "0.0.1"
description = "Analysis for the paper."
readme = "README.md"
requires-python = "<3.7"
license = { text = "MIT" }

authors = [
    { name = "Andrea Incatasciato", email = "andrea.incatasciato93@gmail.com" }
]

dependencies = [
    "frigus",
    "hdf5",
    "matplotlib",
    "numpy",
    "scipy",
]

[tool.setuptools]
packages = ["lwrates_analysis"]